--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/json2Interface_static/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>json to interface</title>
     <script type="module" crossorigin src="/json2Interface_static/assets/index.2ecf46a4.js"></script>
